e.keyCode is how i am getting the keycode for different buttons

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 
 	<audio data-key="65" src="sounds/808.wav"></audio>
-
+	<audio data-key="83" src="sounds/clap.wav"></audio>	
+	<audio data-key="68" src="sounds/crash.wav"></audio>
 	<script src="app.js"></script>
 </body>
 </html>
