sounds are connected

--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 	<audio data-key="65" src="sounds/808.wav"></audio>
 	<audio data-key="83" src="sounds/clap.wav"></audio>	
 	<audio data-key="68" src="sounds/crash.wav"></audio>
+	<audio data-key="70" src="sounds/highHatClosed.wav"></audio>
+	<audio data-key="71" src="sounds/highHatOpen.wav"></audio>	
+	<audio data-key="72" src="sounds/hype.wav"></audio>	
+	<audio data-key="74" src="sounds/kick.wav"></audio>	
+	<audio data-key="75" src="sounds/ride.wav"></audio>	
+	<audio data-key="75" src="sounds/siren.wav"></audio>	
+	<audio data-key="76" src="sounds/snare.wav"></audio>	
 	<script src="app.js"></script>
 </body>
 </html>
