desktop size is starting to look good

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Vanilla Tortilla Beats</title>
+	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-	
+
   <div class="keys">
     <div data-key="65" class="key">
       <kbd>A</kbd>
@@ -43,7 +44,7 @@
     </div>
     <div data-key="76" class="key">
       <kbd>L</kbd>
-      <span class="sound">Siren</span>
+      <span class="sound">snare</span>
     </div>
   </div>
 
