--- a/index.html
+++ b/index.html
@@ -2,51 +2,50 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<title>Vanilla Tortilla Beats</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-
-  <div class="keys">
-    <div data-key="65" class="key">
-      <kbd>A</kbd>
-      <span class="sound">808</span>
-    </div>
-    <div data-key="83" class="key">
-      <kbd>S</kbd>
-      <span class="sound">clap</span>
-    </div>
-    <div data-key="68" class="key">
-      <kbd>D</kbd>
-      <span class="sound">crash</span>
-    </div>
-    <div data-key="70" class="key">
-      <kbd>F</kbd>
-      <span class="sound">Closed Hat</span>
-    </div>
-    <div data-key="71" class="key">
-      <kbd>G</kbd>
-      <span class="sound">Open Hat</span>
-    </div>
-    <div data-key="72" class="key">
-      <kbd>H</kbd>
-      <span class="sound">Hype</span>
-    </div>
-    <div data-key="74" class="key">
-      <kbd>J</kbd>
-      <span class="sound">Kick</span>
-    </div>
-    <div data-key="75" class="key">
-      <kbd>K</kbd>
-      <span class="sound">Ride</span>
-    </div>
-    <div data-key="76" class="key">
-      <kbd>L</kbd>
-      <span class="sound">snare</span>
-    </div>
-  </div>
+	  <div class="keys">
+	    <div data-key="65" class="key">
+	      <kbd>A</kbd>
+	      <span class="sound">808</span>
+	    </div>
+	    <div data-key="83" class="key">
+	      <kbd>S</kbd>
+	      <span class="sound">clap</span>
+	    </div>
+	    <div data-key="68" class="key">
+	      <kbd>D</kbd>
+	      <span class="sound">crash</span>
+	    </div>
+	    <div data-key="70" class="key">
+	      <kbd>F</kbd>
+	      <span class="sound">Closed Hat</span>
+	    </div>
+	    <div data-key="71" class="key">
+	      <kbd>G</kbd>
+	      <span class="sound">Open Hat</span>
+	    </div>
+	    <div data-key="72" class="key">
+	      <kbd>H</kbd>
+	      <span class="sound">Hype</span>
+	    </div>
+	    <div data-key="74" class="key">
+	      <kbd>J</kbd>
+	      <span class="sound">Kick</span>
+	    </div>
+	    <div data-key="75" class="key">
+	      <kbd>K</kbd>
+	      <span class="sound">Ride</span>
+	    </div>
+	    <div data-key="76" class="key">
+	      <kbd>L</kbd>
+	      <span class="sound">snare</span>
+	    </div>
 
 
 
