experimenting with sound playing on click

--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
 
 
 
-	<audio data-key="65" src="sounds/808.wav"></audio>
-	<audio data-key="83" src="sounds/clap.wav"></audio>	
-	<audio data-key="68" src="sounds/crash.wav"></audio>
-	<audio data-key="70" src="sounds/highHatClosed.wav"></audio>
-	<audio data-key="71" src="sounds/highHatOpen.wav"></audio>	
-	<audio data-key="72" src="sounds/hype.wav"></audio>	
-	<audio data-key="74" src="sounds/kick.wav"></audio>	
-	<audio data-key="75" src="sounds/ride.wav"></audio>	
-	<audio data-key="75" src="sounds/siren.wav"></audio>	
-	<audio data-key="76" src="sounds/snare.wav"></audio>	
+	<audio data-key="65" src="sounds/808.wav" id="sound-1"></audio>
+	<audio data-key="83" src="sounds/clap.wav" id="sound-2"></audio>	
+	<audio data-key="68" src="sounds/crash.wav" id="sound-3"></audio>
+	<audio data-key="70" src="sounds/highHatClosed.wav" id="sound-5"></audio>
+	<audio data-key="71" src="sounds/highHatOpen.wav" id="sound-6"></audio>	
+	<audio data-key="72" src="sounds/hype.wav" id="sound-7"></audio>	
+	<audio data-key="74" src="sounds/kick.wav" id="sound-8"></audio>	
+	<audio data-key="75" src="sounds/ride.wav" id="sound-9"></audio>	
+	<audio data-key="75" src="sounds/siren.wav" id="sound-10"></audio>	
+	<audio data-key="76" src="sounds/snare.wav" id = "sound-11"></audio>	
 	<script src="app.js"></script>
 </body>
 </html>
