had some time to think about it and imma just add a buncha event listeners for now

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
 
 	  <div class="keys">
-	    <div data-key="65" class="key">
-	      <kbd>A</kbd>
-	      <span class="sound">808</span>
+	    <div data-key="65" class="key bass">
+	      <kbd class="bass">A</kbd>
+	      <span class="sound ">808</span>
 	    </div>
 	    <div data-key="83" class="key">
 	      <kbd>S</kbd>
