--- a/index.html
+++ b/index.html
@@ -14,35 +14,35 @@
 	      <kbd class="bass">A</kbd>
 	      <span class="sound ">808</span>
 	    </div>
-	    <div data-key="83" class="key">
+	    <div data-key="83" class="key clap">
 	      <kbd>S</kbd>
 	      <span class="sound">clap</span>
 	    </div>
-	    <div data-key="68" class="key">
+	    <div data-key="68" class="key crash">
 	      <kbd>D</kbd>
 	      <span class="sound">crash</span>
 	    </div>
-	    <div data-key="70" class="key">
+	    <div data-key="70" class="key closedHat">
 	      <kbd>F</kbd>
 	      <span class="sound">Closed Hat</span>
 	    </div>
-	    <div data-key="71" class="key">
+	    <div data-key="71" class="key openHat">
 	      <kbd>G</kbd>
 	      <span class="sound">Open Hat</span>
 	    </div>
-	    <div data-key="72" class="key">
+	    <div data-key="72" class="key hype">
 	      <kbd>H</kbd>
 	      <span class="sound">Hype</span>
 	    </div>
-	    <div data-key="74" class="key">
+	    <div data-key="74" class="key kick">
 	      <kbd>J</kbd>
 	      <span class="sound">Kick</span>
 	    </div>
-	    <div data-key="75" class="key">
+	    <div data-key="75" class="key ride">
 	      <kbd>K</kbd>
 	      <span class="sound">Ride</span>
 	    </div>
-	    <div data-key="76" class="key">
+	    <div data-key="76" class="key snare">
 	      <kbd>L</kbd>
 	      <span class="sound">snare</span>
 	    </div>
